refactor: allow charts and prose to be null
